--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main">
         <div class="navbar">
             <img src="Images/logo.png" alt="">
-            <button class="btn"><a href="http://127.0.0.1:5500/login.html">Sign Up</a></button>
+            <button class="btn"><a href="login.html">Sign Up</a></button>
         </div>
         <div class="content">
             <h1>Unlimited movies, TV <br> shows, and more.</h1>
