--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <hr><hr><hr>
     <div class="fifth">
-        <img src="images/kids.png" alt="">
+        <img src="Images/kids.png" alt="">
         <div class="content">
             <h1>Create profiles for kids.</h1>
             <p class="para">Send kids on adventures with their favorite <br> characters in a space made just for them—free <br> with your membership.</p>
